--- a/main.css
+++ b/main.css
@@ -565,3 +565,81 @@ nav li:hover:after {
 .demo6-box:hover img {
     opacity: .6;
 }
+
+
+
+
+/*demo7*/
+#demo7 {
+    -webkit-perspective: 800px;
+       -moz-perspective: 800px;
+        -ms-perspective: 800px;
+            perspective: 800px;
+}
+
+.demo7-box {
+    width: 100%;
+    height: 340px;
+    border: 2px solid #ddd;
+    background: #000;
+
+    -webkit-transition: transform .4s ease, box-shadow .2s linear;
+       -moz-transition: transform .4s ease, box-shadow .2s linear;
+        -ms-transition: transform .4s ease, box-shadow .2s linear;
+         -o-transition: transform .4s ease, box-shadow .2s linear;
+            transition: transform .4s ease, box-shadow .2s linear;
+
+    -webkit-transform-style: preserve-3d;
+       -moz-transform-style: preserve-3d;
+        -ms-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+}
+
+.demo7-box .img-box {
+    height: 70%;
+}
+
+.demo7-box img {
+    width: 100%;
+    height: 100%;
+}
+
+.demo7-box .text-box {
+    width: 100%;
+    height: 30%;
+    padding-left: 20px;
+    background: #fff;
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.demo7-box h3 {
+    font: bold 20px/48px "Microsoft YaHei";
+}
+
+.demo7-box a {
+    color: #8a00ab;
+}
+
+
+.demo7-box p {
+    font: 16px/20px "Microsoft YaHei";
+    text-align: left;
+    color: #888;
+}
+
+.demo7-box:hover {
+    -webkit-transform: translateZ(50px);
+       -moz-transform: translateZ(50px);
+        -ms-transform: translateZ(50px);
+         -o-transform: translateZ(50px);
+            transform: translateZ(50px);
+    -webkit-box-shadow: 0 0 30px #ccc;
+       -moz-box-shadow: 0 0 30px #ccc;
+            box-shadow: 0 0 30px #ccc;
+}
+
+
+
