--- a/main.css
+++ b/main.css
@@ -17,7 +17,8 @@ button,
 nav,
 ul,
 li,
-input {
+input,
+textarea {
     margin: 0;
     padding: 0;
     font-family: "arial", "Microsoft YaHei";
@@ -42,7 +43,7 @@ p {
 .content > div {
     width: 460px;
     height: auto;
-    margin: 20px auto;
+    margin: 60px auto 20px auto;
     padding: 30px 60px;
     border: 2px solid #ddd;
     font-size: 0;
@@ -58,8 +59,23 @@ p {
             box-shadow: 2px 2px 10px #ddd;
 }
 
-.content > p {
-    padding-bottom: 50px;
+.title {
+    display: block;
+    width: 420px;
+    padding-bottom: 20px;
+    cursor: pointer;
+    margin: 0 auto;
+}
+
+textarea {
+    display: none;
+    width: 420px;
+    height: 420px;
+    margin: 0 auto;
+    padding: 20px;
+    font-size: 16px;
+    line-height: 20px;
+    color: #444;
 }
 
 
